<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EventFragment">

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/event_fragment_all_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_event_button_all" />

        <Button
            android:id="@+id/event_fragment_fav_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorGrayDarkTransparent"
            android:text="@string/fragment_event_button_fav" />

        <ImageButton
            android:id="@+id/event_fragment_filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:scaleType="fitCenter"
            android:src="@drawable/setting"
            android:contentDescription="TODO" />

    </LinearLayout>

    <ListView
        android:id="@+id/event_fragment_listview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/even_filter_constraintLayout" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/even_filter_constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/event_fragment_listview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttons_layout">

        <EditText
            android:id="@+id/event_fragment_search_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/fragment_event_search_bar_text"
            android:inputType="textPersonName"
            android:textColor="#80000000"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/event_fragment_checkbox_sort_like"
            app:layout_constraintTop_toBottomOf="@+id/event_fragment_from_date"
            app:layout_constraintVertical_bias="0.3" />

        <CheckBox
            android:id="@+id/event_fragment_checkbox_sort_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/fragment_event_checkbox_sort_likes"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/event_fragment_search_bar"
            app:layout_constraintStart_toEndOf="@+id/event_fragment_checkBox_sort_name"
            app:layout_constraintTop_toBottomOf="@+id/event_fragment_from_date" />

        <EditText
            android:id="@+id/event_fragment_to_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="To date"
            android:inputType="date"
            android:longClickable="false"
            android:singleLine="true"
            android:textColor="#80000000"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/event_fragment_search_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.347"
            app:layout_constraintStart_toEndOf="@+id/event_fragment_from_date"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/event_fragment_from_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="From date"
            android:inputType="date"
            android:longClickable="false"
            android:singleLine="true"
            android:textColor="#80000000"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/event_fragment_search_bar"
            app:layout_constraintEnd_toStartOf="@+id/event_fragment_to_date"
            app:layout_constraintStart_toEndOf="@+id/event_fragment_checkBox_sort_date"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/event_fragment_checkBox_sort_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/fragment_event_checkbox_sort_date"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/event_fragment_checkBox_sort_name"
            app:layout_constraintEnd_toStartOf="@+id/event_fragment_from_date"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <CheckBox
            android:id="@+id/event_fragment_checkBox_sort_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:checked="false"
            android:text="@string/fragment_event_checkbox_sort_name"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/event_fragment_checkbox_sort_like"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_fragment_from_date" />

    </android.support.constraint.ConstraintLayout>

    <ImageButton
        android:id="@+id/event_add_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="25dp"
        android:layout_marginRight="25dp"
        android:background="@android:drawable/list_selector_background"
        android:src="@drawable/add_button"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="TODO" />


</android.support.constraint.ConstraintLayout>